reactSession 및 mySql 로컬로 변경 후 버전업

--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,16 @@
           <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         
-		<dependency>
+		<!-- <dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.30</version>
+		</dependency> -->
+		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.30</version>
 		</dependency>
 		
 		<!--dependency>
