--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,11 @@ server.port=80
 #server.address=185.199.109.153
 #server.address=185.199.110.153
 #server.address=185.199.111.153
-spring.datasource.url=jdbc:log4jdbc:mysql://13.125.198.29:3306/vuedb?allowMultiQueries=true
+#spring.datasource.url=jdbc:log4jdbc:mysql://13.125.198.29:3306/vuedb?allowMultiQueries=true
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/REACT-APP
 spring.datasource.username=root
-spring.datasource.password=hwangkh704!
+#spring.datasource.password=hwangkh704!
+spring.datasource.password=test3978!!
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.jpa.hibernate.ddl-auto=update
 
