--- a/src/frontEnd/package.json
+++ b/src/frontEnd/package.json
@@ -11,9 +11,12 @@
         "cors": "^2.8.5",
         "http-proxy-middleware": "^2.0.6",
         "react": "^18.2.0",
+        "react-cookie": "^7.1.4",
         "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3",
         "react-scripts": "5.0.1",
+        "redux": "^5.0.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
